Add ms skeleton

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,48 @@
+# Server settings
+server.port=9090
 
+# OracleDB connection settings
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# JPA settings
+spring.jpa.database=ORACLE
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+## https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+spring.jpa.open-in-view=false
+
+# JWT
+jwt.private.key=classpath:keys/app.key
+jwt.public.key=classpath:keys/app.pub
+## Expire in 1 hour
+jwt.expirationTimeInSeconds=3600
+
+# Encryption settings
+encryption.secret.email=${ENCRYPTION_SECRET_EMAIL}
+encryption.initializationVector=${ENCRYPTION_INITIALIZATION_VECTOR}
+
+# Password settings
+user.password.regex=^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).+$
+user.password.minLength=8
+user.password.maxLength=256
+
+# Allowed Client IDs
+app.clientIds=${CLIENT_IDs}
+
+# API settings
+api.title=Spring JWT Demo
+api.description=Spring JWT Demo
+api.version=0.1
+api.stage=Development
+api.server.url=http://localhost:9090
+api.contact.name=Example Name
+api.contact.email=example@example.com
+api.contact.url=www.google.com
+api.license.name=Apache 2.0
+api.license.url=https://www.apache.org/licenses/LICENSE-2.0
+api.tos.uri=www.google.com
