--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,15 +21,19 @@ jwt.private.key=classpath:keys/app.key
 jwt.public.key=classpath:keys/app.pub
 ## Expire in 1 hour
 jwt.expirationTimeInSeconds=3600
+jwt.issuer=Spring JWT Demo
 
 # Encryption settings
 encryption.secret.email=${ENCRYPTION_SECRET_EMAIL}
 encryption.initializationVector=${ENCRYPTION_INITIALIZATION_VECTOR}
 
-# Password settings
+# Password Validation
 user.password.regex=^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).+$
 user.password.minLength=8
 user.password.maxLength=256
+
+# Email Validation
+user.email.regex=^[a-zA-Z0-9_!#$%&'*+/=?`{|}~^.-]+@[a-zA-Z0-9.-]+$
 
 # Allowed Client IDs
 app.clientIds=${CLIENT_IDs}
