--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # JPA settings
 spring.jpa.database=ORACLE
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
