--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.jpa.properties.hibernate.format_sql=false
 ## https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
 spring.jpa.open-in-view=false
 
+# CORS settings
+cors.enabled=true
+cors.allowedOrigins=http://localhost:9090,http://localhost:4200
+
 # JWT
 jwt.private.key=classpath:keys/app.key
 jwt.public.key=classpath:keys/app.pub
