Add swagger server config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ app.clientIds=${CLIENT_IDs}
 api.title=Spring JWT Demo
 api.description=Spring JWT Demo
 api.version=0.1
-api.stage=Development
+api.stage=Production
 api.server.url=http://localhost:9090
 api.contact.name=Example Name
 api.contact.email=example@example.com
