--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # DB
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=demo_db
+spring.datasource.url=jdbc:postgresql://localhost:7432/demo_db
+spring.datasource.username=demo_user
 spring.datasource.password=DemoUser1Pass2Qa
 
 # JPA settings
