--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,11 @@
             <artifactId>spring-security-oauth2-jose</artifactId>
         </dependency>
 
-        <!--        The Bouncy Castle - Crypto Package For Java-->
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.70</version>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.76</version>
         </dependency>
 
         <!--        OpenApi + Swagger-->
@@ -52,14 +52,14 @@
             <version>2.2.0</version>
         </dependency>
 
-        <!--        DB (Oracle) -->
+        <!--        DB (PostgreSQL) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
 
