--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 # Server settings
 server.port=9090
 
-# OracleDB connection settings
+# DB
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA settings
-spring.jpa.database=ORACLE
+# JPA
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-## https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
-spring.jpa.open-in-view=false
 
 # CORS settings
 cors.enabled=true
